[gd_scene load_steps=15 format=3 uid="uid://cr2r2nh3wiwp7"]

[ext_resource type="Texture2D" uid="uid://wfckuksjj8p1" path="res://Textures/XPBUTTON_CLOSE.png" id="1_oxv35"]
[ext_resource type="Script" uid="uid://7gf0seo0wa5a" path="res://Scripts/password_window.gd" id="2_j5pn4"]
[ext_resource type="FontFile" uid="uid://cwih7em0ui2i2" path="res://Fonts/windows-xp-tahoma.ttf" id="3_fm3t0"]
[ext_resource type="Texture2D" uid="uid://cmxt1jg4syvup" path="res://Textures/XPTITLEBAR.png" id="3_qlw7y"]
[ext_resource type="Texture2D" uid="uid://b4jsqostccsu1" path="res://Textures/XPBUTTON_CLOSE_PRESSED.png" id="4_ux0bb"]
[ext_resource type="Texture2D" uid="uid://hx7ycuv6w7od" path="res://Textures/XPBUTTON_CLOSE_HOVER.png" id="5_whqb0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oxv35"]
texture = ExtResource("3_qlw7y")

[sub_resource type="SystemFont" id="SystemFont_qlw7y"]
font_names = PackedStringArray("Tahoma")
font_weight = 550
subpixel_positioning = 0
oversampling = 10.0

[sub_resource type="SystemFont" id="SystemFont_oxv35"]
font_names = PackedStringArray("Tahoma")
font_weight = 700
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oxv35"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_right = 4
border_width_bottom = 2
border_color = Color(0, 0.0968496, 0.698447, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qlw7y"]
bg_color = Color(0.92549, 0.913725, 0.847059, 1)

[sub_resource type="LabelSettings" id="LabelSettings_oxv35"]
font = ExtResource("3_fm3t0")
font_color = Color(0, 0, 0, 1)

[sub_resource type="SystemFont" id="SystemFont_j5pn4"]
font_names = PackedStringArray("Tahoma")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_t4e2s"]
font_names = PackedStringArray("Tahoma")
subpixel_positioning = 0

[node name="TitlePanel" type="Panel"]
offset_right = 452.0
offset_bottom = 22.0
theme_override_styles/panel = SubResource("StyleBoxTexture_oxv35")
script = ExtResource("2_j5pn4")

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 3.0
offset_right = 451.0
offset_bottom = 20.0
tooltip_text = "Close"
texture_normal = ExtResource("1_oxv35")
texture_pressed = ExtResource("4_ux0bb")
texture_hover = ExtResource("5_whqb0")
ignore_texture_size = true
stretch_mode = 5

[node name="TitleLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 200.0
offset_bottom = 22.0
theme_override_fonts/normal_font = SubResource("SystemFont_qlw7y")
theme_override_fonts/bold_font = SubResource("SystemFont_oxv35")
theme_override_font_sizes/normal_font_size = 12
theme_override_font_sizes/bold_font_size = 10
bbcode_enabled = true
text = "Wireless Network Connection"

[node name="BorderPanel" type="Panel" parent="."]
layout_mode = 0
offset_top = 22.0
offset_right = 452.0
offset_bottom = 195.0
theme_override_styles/panel = SubResource("StyleBoxFlat_oxv35")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 22.0
offset_right = 450.0
offset_bottom = 193.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qlw7y")

[node name="InfoLabel" type="Label" parent="BackgroundPanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 13.0
offset_right = 430.0
offset_bottom = 46.0
text = "The network 'Network' requires a network key (also called a WEP key or WPA key). A network key helps prevent unknown intruders from connecting to this network."
label_settings = SubResource("LabelSettings_oxv35")
autowrap_mode = 2

[node name="InfoLabel2" type="Label" parent="BackgroundPanel"]
layout_mode = 0
offset_left = 13.0
offset_top = 55.0
offset_right = 228.0
offset_bottom = 69.0
text = "Type the key, and then click Connect."
label_settings = SubResource("LabelSettings_oxv35")
autowrap_mode = 2

[node name="NetworkKey" type="Label" parent="BackgroundPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 88.0
offset_right = 83.0
offset_bottom = 102.118
text = "Network Key:"
label_settings = SubResource("LabelSettings_oxv35")
autowrap_mode = 2

[node name="NetworkKey2" type="Label" parent="BackgroundPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 122.0
offset_right = 118.0
offset_bottom = 136.118
text = "Confirm Network Key:"
label_settings = SubResource("LabelSettings_oxv35")
autowrap_mode = 2

[node name="NetworkPassword" type="LineEdit" parent="BackgroundPanel"]
layout_mode = 0
offset_left = 142.0
offset_top = 83.0
offset_right = 442.0
offset_bottom = 106.0
theme_override_fonts/font = SubResource("SystemFont_j5pn4")
theme_override_font_sizes/font_size = 12
text = "Baspios377!"
max_length = 15
caret_blink = true
secret = true

[node name="NetworkPassword2" type="LineEdit" parent="BackgroundPanel"]
layout_mode = 0
offset_left = 142.0
offset_top = 120.0
offset_right = 442.0
offset_bottom = 143.0
theme_override_fonts/font = SubResource("SystemFont_t4e2s")
theme_override_font_sizes/font_size = 12
text = "Baspios377!"
max_length = 15
caret_blink = true
secret = true

[node name="Connect" type="Button" parent="BackgroundPanel"]
layout_mode = 0
offset_left = 296.0
offset_top = 149.0
offset_right = 370.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 13
text = "Connect"

[node name="Cancel" type="Button" parent="BackgroundPanel"]
layout_mode = 0
offset_left = 380.0
offset_top = 149.0
offset_right = 444.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 13
text = "Cancel"

[connection signal="pressed" from="BackgroundPanel/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="BackgroundPanel/Cancel" to="." method="_on_cancel_pressed"]
